@@ -1,3 +1,9 @@
+Mon Feb 23 09:30:30 CET 2004  Pekka Riikonen <priikone@silcnet.org>
+
+	* Added support for public key watching in server.  Affected
+	  files are silcd/server.c, server_internal.h, command.c,
+	  server_util.c.
+
 Sun Feb 22 19:03:59 EET 2004  Pekka Riikonen <priikone@silcnet.org>
 
 	* Added public key to the SIlcClientEntry.  Affected files
